# Task1

./: CMakeLists.txt  HSE_Task2.py  Main.py  cpp_module.cpp  cpp_module.py
